--- a/src/Calculator/App.xaml
+++ b/src/Calculator/App.xaml
@@ -162,13 +162,13 @@
             <x:Double x:Key="OverflowGlyphFontSizeLarge">24</x:Double>
             <x:Double x:Key="OverflowChevronFontSizeLarge">16</x:Double>
 
-            <x:Double x:Key="OverflowButtonRowSizeMedium">48</x:Double>
+            <x:Double x:Key="OverflowButtonRowSizeMedium">64</x:Double>
             <x:Double x:Key="OverflowFontSizeMedium">16</x:Double>
             <x:Double x:Key="OverflowGlyphFontSizeMedium">20</x:Double>
             <x:Double x:Key="OverflowChevronFontSizeMedium">10</x:Double>
 
-            <x:Double x:Key="OverflowButtonRowSizeSmall">36</x:Double>
-            <x:Double x:Key="OverflowFontSizeSmall">12</x:Double>
+            <x:Double x:Key="OverflowButtonRowSizeSmall">38</x:Double>
+            <x:Double x:Key="OverflowFontSizeSmall">14</x:Double>
             <x:Double x:Key="OverflowGlyphFontSizeSmall">16</x:Double>
             <x:Double x:Key="OverflowChevronFontSizeSmall">8</x:Double>
 
@@ -601,6 +601,7 @@
                                                   ContentTransitions="{TemplateBinding ContentTransitions}">
                                     <StackPanel Orientation="Horizontal">
                                         <FontIcon Margin="0,0,6,0"
+                                                  VerticalAlignment="Bottom"
                                                   FontFamily="{StaticResource CalculatorFontFamily}"
                                                   FontSize="{TemplateBinding GlyphFontSize}"
                                                   Glyph="{TemplateBinding Glyph}"/>
